--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>As a seasoned data engineer, I specialise in designing scalable data platforms that translate complex data into strategic insights. My work accelerates time‑to‑insight while optimising costs and ensuring governance. Recently at BGC (Australia) Pty Ltd, I streamlined ETL pipelines across Microsoft Fabric, Azure Data Factory and NiFi, reducing batch processing times by 40% and accelerating time‑to‑insight. I also built a cost‑optimised data lakehouse using Apache Kafka, Hadoop and Snowflake, cutting infrastructure costs by 30% while ensuring auditability and governance【987458079634145†L342-L377】.</p>
+            <p>As a seasoned data engineer, I specialise in designing scalable data platforms that translate complex data into strategic insights. My work accelerates time‑to‑insight while optimising costs and ensuring governance. Recently at BGC (Australia) Pty Ltd, I streamlined ETL pipelines across Microsoft Fabric, Azure Data Factory and NiFi, reducing batch processing times by 40% and accelerating time‑to‑insight. I also built a cost‑optimised data lakehouse using Apache Kafka, Hadoop and Snowflake, cutting infrastructure costs by 30% while ensuring auditability and governance.</p>
             <p>I thrive on solving business problems through data architecture, mentoring teams and collaborating with stakeholders to deliver robust solutions. With native English, Hindi and Punjabi language skills, I navigate cross‑cultural teams with ease.</p>
             <p>I also focus on cutting‑edge topics such as agentic AI and large language models, exploring how autonomous agents and advanced AI can transform data‑driven decision making and unlock new business opportunities.</p>
         </section>
@@ -837,7 +837,7 @@
             <h2>Contact</h2>
             <p>Interested in collaborating or discussing data engineering challenges? Feel free to reach out.</p>
             <ul class="contact-info">
-                <li>Email: <a href="mailto:madhur@example.com">madhur@example.com</a></li>
+                <li>Email: <a href="mailto:madhursabherwal1230@gmail.com">madhursabherwal1230@gmail.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/madhur-sabherwal/" target="_blank">linkedin.com/in/madhur-sabherwal</a></li>
             </ul>
         </section>
