--- a/index.html
+++ b/index.html
@@ -895,10 +895,10 @@
 
         // Random facts about data engineering (rotating)
         const facts = [
-            "In 2025, the world will generate 181 zettabytes of data and create 2.5 quintillion bytes each day【592963331983811†L62-L65】.",
-            "Over 97% of businesses have invested in Big Data, yet only 40% use analytics effectively【592963331983811†L66-L68】.",
-            "90% of the world’s data has been created in the last two years【592963331983811†L97-L99】.",
-            "The Big Data analytics market is projected to reach $924.39 billion by 2032【592963331983811†L66-L68】."
+            "In 2025, the world will generate 181 zettabytes of data and create 2.5 quintillion bytes each day.",
+            "Over 97% of businesses have invested in Big Data, yet only 40% use analytics effectively.",
+            "90% of the world’s data has been created in the last two years.",
+            "The Big Data analytics market is projected to reach $924.39 billion by 2032."
         ];
         let factIndex = 0;
         function displayFact() {
