--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="project1.png" alt="ETL Pipeline Optimisation">
+                        <img src="Project1.png" alt="ETL Pipeline Optimisation">
                     </div>
                     <h3>ETL Pipeline Optimisation</h3>
                     <p>Streamlined batch and streaming ETL workflows across Microsoft Fabric, Azure Data Factory and NiFi, reducing processing latency by 40% and accelerating reporting.</p>
@@ -684,7 +684,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="project3.png" alt="DataOps &amp; CI/CD">
+                        <img src="Project3.png" alt="DataOps &amp; CI/CD">
                     </div>
                     <h3>DataOps &amp; CI/CD</h3>
                     <p>Instituted DataOps pipelines and CI/CD across ETL workflows; halved deployment cycles and improved reliability through proactive monitoring and automation.</p>
@@ -925,11 +925,19 @@
 
         // Random facts about data engineering (rotating)
         const facts = [
-            "In 2025, the world will generate 181 zettabytes of data and create 2.5 quintillion bytes each day【592963331983811†L62-L65】.",
-            "Over 97% of businesses have invested in Big Data, yet only 40% use analytics effectively【592963331983811†L66-L68】.",
-            "90% of the world’s data has been created in the last two years【592963331983811†L97-L99】.",
-            "The Big Data analytics market is projected to reach $924.39 billion by 2032【592963331983811†L66-L68】."
-        ];
+    "In 2025, the world will generate 181 zettabytes of data and create 2.5 quintillion bytes each day.",
+    "Over 97% of businesses have invested in Big Data, yet only 40% use analytics effectively.",
+    "90% of the world’s data has been created in the last two years.",
+    "The Big Data analytics market is projected to reach $924.39 billion by 2032.",
+    "Agentic AI is expected to redefine workflows, enabling software to act autonomously on behalf of users.",
+    "Snowflake and Databricks are among the top platforms leading the modern data stack revolution.",
+    "Only 12% of data collected by organizations is analyzed—leaving a massive opportunity untapped.",
+    "Data engineers spend 60–80% of their time preparing data rather than analyzing it.",
+    "LLMs (Large Language Models) are now being embedded into data pipelines for autonomous data quality checks.",
+    "Edge computing is expected to handle 75% of data processing outside centralized data centers by 2025.",
+    "Apache Kafka processes over 5 trillion messages per day across global systems."
+];
+
         let factIndex = 0;
         function displayFact() {
             const factTextElem = document.getElementById('fact-text');
