--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madhur Sabherwal | Data Engineer Portfolio</title>
+    <title>Madhur Sabherwal | Data  Portfolio</title>
     <!-- Import Poppins font for a modern, clean look -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -599,13 +599,15 @@
             <span id="fact-text"></span>
         </div>
     </header>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>As a seasoned data engineer, I specialise in designing scalable data platforms that translate complex data into strategic insights. My work accelerates time‑to‑insight while optimising costs and ensuring governance. Recently at BGC (Australia) Pty Ltd, I streamlined ETL pipelines across Microsoft Fabric, Azure Data Factory and NiFi, reducing batch processing times by 40% and accelerating time‑to‑insight. I also built a cost‑optimised data lakehouse using Apache Kafka, Hadoop and Snowflake, cutting infrastructure costs by 30% while ensuring auditability and governance【987458079634145†L342-L377】.</p>
-            <p>I thrive on solving business problems through data architecture, mentoring teams and collaborating with stakeholders to deliver robust solutions. With native English, Hindi and Punjabi language skills, I navigate cross‑cultural teams with ease.</p>
-            <p>I also focus on cutting‑edge topics such as agentic AI and large language models, exploring how autonomous agents and advanced AI can transform data‑driven decision making and unlock new business opportunities.</p>
-        </section>
+ <section id="about">
+    <h2>About Me</h2>
+    <p>I am a results-driven Data Engineer with a proven track record of architecting scalable data platforms that convert complex datasets into actionable business intelligence. At BGC (Australia) Pty Ltd, I led the modernisation of data pipelines across Microsoft Fabric, Azure Data Factory, and Apache NiFi—achieving a 40% reduction in batch processing time and significantly improving time-to-insight.</p>
+
+    <p>My recent initiatives include building a cost-efficient data lakehouse leveraging Apache Kafka, Hadoop, and Snowflake—delivering 30% infrastructure savings while maintaining enterprise-grade auditability and compliance standards. I excel at bridging the gap between technical execution and strategic objectives, mentoring high-performing teams, and collaborating cross-functionally to deliver business-aligned data solutions.</p>
+
+    <p>Fluent in English, Hindi, and Punjabi, I work effectively across diverse, cross-cultural teams. I’m also deeply engaged with emerging technologies such as Agentic AI and large language models, exploring their potential to revolutionize decision-making and unlock competitive advantage through autonomous data-driven systems.</p>
+</section>
+
         <!-- Licenses & Certifications section moved below the Skills section -->
         <!-- Licenses & Certifications placeholder removed: will be inserted after Skills section -->
         <section id="services">
