--- a/index.html
+++ b/index.html
@@ -799,8 +799,8 @@ section:hover, .project-card:hover, .cert-card:hover, .recommendation-card:hover
 <h2>Contact</h2>
 <p>Interested in collaborating or discussing data engineering challenges? Feel free to reach out.</p>
 <ul class="contact-info">
-<li>Email: <a href="mailto:madhur@example.com">madhur@example.com</a></li>
-<li>LinkedIn: <a href="https://www.linkedin.com/in/madhur-sabherwal/" target="_blank">linkedin.com/in/madhur-sabherwal</a></li>
+<li>Email: <a href="mailto:madhursabherwal1230@gmail.com">EMAIL</a></li>
+<li>LinkedIn: <a href="https://www.linkedin.com/in/madhur-sabherwal/" target="_blank">linkedin.com</a></li>
 </ul>
 </section>
 <footer>
