--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ section:hover, .project-card:hover, .cert-card:hover, .recommendation-card:hover
 <ul class="nav-links">
 <li><a href="#about">About</a></li>
 <li><a href="#experience">Experience</a></li>
-<li><a href="#projects">Projects</a></li>
+<li><a href="https://github.com/madhur-sabherwal" target="_blank">GitHub Repo</a></li>
 <li><a href="#skills">Skills</a></li>
 <!-- Updated navigation links to include separate sections for licenses/certifications and awards -->
 <li><a href="#licenses">Licenses &amp; Certifications</a></li>
@@ -624,7 +624,6 @@ section:hover, .project-card:hover, .cert-card:hover, .recommendation-card:hover
 </div>
 </div>
 </section>
-
 <section id="skills">
 <h2>Skills</h2>
 <div class="skills-container">
@@ -799,8 +798,8 @@ section:hover, .project-card:hover, .cert-card:hover, .recommendation-card:hover
 <h2>Contact</h2>
 <p>Interested in collaborating or discussing data engineering challenges? Feel free to reach out.</p>
 <ul class="contact-info">
-<li>Email: <a href="mailto:madhursabherwal1230@gmail.com">EMAIL</a></li>
-<li>LinkedIn: <a href="https://www.linkedin.com/in/madhur-sabherwal/" target="_blank">linkedin.com</a></li>
+<li>Email: <a href="mailto:madhur@example.com">madhur@example.com</a></li>
+<li>LinkedIn: <a href="https://www.linkedin.com/in/madhur-sabherwal/" target="_blank">linkedin.com/in/madhur-sabherwal</a></li>
 </ul>
 </section>
 <footer>
